[QA-565] Fix notification overflow bug (#3732)

--- a/apps/audius-client/packages/stems/src/components/MarkdownViewer/MarkdownViewer.module.css
+++ b/apps/audius-client/packages/stems/src/components/MarkdownViewer/MarkdownViewer.module.css
@@ -5,7 +5,6 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
-  overflow: scroll;
 }
 
 .root h1,
